--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,5 +1,11 @@
 @import "~bootswatch/dist/cosmo/variables";
 @import "~bootstrap/scss/functions";
+
+$custom-file-text: (
+        en: "Browse",
+        ru: "Открыть"
+);
+
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/cosmo/_bootswatch";
